src/css/style.css
@charset "UTF-8";
@import url("https://fonts.googleapis.com/css2?family=Anton&family=Antonio:wght@100..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
:root {
  /* Light Mode */
  --bg-primary: #f8f4ef;
  --bg-secondary: #e8d8c35c;
  --bg-tertiary: #e8e8e5;
  --bg-service-card: #ffffff;
  --bg-service-hovered: #000000;
  --openToWork-bg: #b3af9424;
  --openToWork-hovered: #d5d5d5c9;
  --stack-link: #e8e8e89a;
  --light-gray-bg: #eeeeeeaf;
  --profile-gradient: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0) 60%,
    rgba(255, 255, 255, 0) 100%
  );
  --text-primary: #332d25;
  --text-secondary: #695f51;
  --text-tertiary: #988c7d;
  --text-tag: #a2896be6;
  --text-service-hovered: #ffffff;
  --description-service-hovered: #c7c7bb;
  --text-label: #332d25;
  --border-primary: #bebebe;
  --border-secondary: #ccccc7;
  --border-tertiary: #72645229;
  --border-tag: #c2b3a1;
  --border-services: transparent;
  --border-resume: #c7c2bc;
  --shadow-service: rgb(255 255 255 / 39%);
  --button-primary-bg: #332d25;
  --button-primary-text: #ffffff;
  --button-primary-bg-hovered: #2e2e2e;
  --button-primary-disabled-bg: #d4d4d4;
  --button-primary-disabled-text: #808080;
  --cta-button-hover: #504639;
  --surface-hover: #e8e8e5;
  --surface-active: #d9d9d5;
  --accent-soft: #d9d9d5;
  --accent-medium: #b8b8af;
  --accent-strong: #6a6a60;
  --selection-bg: #ccccc7;
  --text-primary-rgb: 13, 13, 11;
  --text-secondary-rgb: 58, 58, 53;
  --text-tertiary-rgb: 106, 106, 96;
}

.dark {
  /* Dark Mode */
  --bg-primary: #000000;
  --bg-secondary: #151515;
  --bg-tertiary: #1a1a1a;
  --bg-service-card: #000000;
  --bg-service-hovered: #151515;
  --openToWork-bg: #18181bbd;
  --openToWork-hovered: #27272aba;
  --stack-link: #18181b;
  --light-gray-bg: #43434336;
  --profile-gradient: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0) 60%,
    rgb(0, 0, 0) 100%
  );
  --text-primary: #ffffff;
  --text-secondary: #9f9fa9;
  --text-tertiary: #848484;
  --text-tag: #a1a1a1;
  --text-service-hovered: #ffffff;
  --description-service-hovered: #828282;
  --text-label: #9f9fa9;
  --border-primary: #3a3a3a;
  --border-secondary: #3f3f3f;
  --border-tertiary: #1d1d1d;
  --border-tag: #262626;
  --border-services: #252525;
  --border-resume: #3f3f46;
  --shadow-service: none;
  --button-primary-text: #000000;
  --button-primary-bg: #ffffff;
  --button-primary-bg-hovered: #d2d2d2;
  --button-primary-disabled-bg: #444444a3;
  --button-primary-disabled-text: #646464;
  --cta-button-hover: #bfbfbf;
  --surface-hover: #1f1f1f;
  --surface-active: #2a2a2a;
  --accent-soft: #3f3f3f;
  --accent-medium: #2f2f2f;
  --accent-strong: #a8a8a8;
  --selection-bg: #3f3f3f;
}

body {
  font-family: "Inter", sans-serif;
  background-color: var(--bg-primary);
  color: var(--text-primary);
  padding-inline: 25rem;
}
body::selection {
  background-color: var(--selection-bg);
  color: var(--text-primary);
}
@media (width <= 1280px) {
  body {
    padding-inline: 10rem;
  }
}
@media (width <= 884px) {
  body {
    padding-inline: 2rem;
  }
}
@media (width <= 640px) {
  body {
    padding-inline: 1rem;
  }
}
@media (width <= 400px) {
  body {
    padding-inline: 0.7rem;
  }
}

textarea::-webkit-scrollbar {
  display: none;
}
textarea {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
  background-color: var(--bg-secondary);
  color: var(--text-primary);
  border-color: var(--border-primary);
}

.blog-body {
  display: grid;
  grid-template-columns: 80% auto;
  gap: 3rem;
}
@media (width <= 1280px) {
  .blog-body {
    grid-template-columns: 75% auto;
    gap: 2.5rem;
  }
}
@media (width <= 884px) {
  .blog-body {
    gap: 2rem;
  }
}
@media (width <= 640px) {
  .blog-body {
    display: block;
  }
}
.blog-section {
  display: grid;
  gap: 2rem;
}
@media (width <= 1280px) {
  .blog-section {
    gap: 1.8rem;
  }
}
@media (width <= 884px) {
  .blog-section {
    gap: 3rem;
  }
}
@media (width <= 640px) {
  .blog-section {
    gap: 4rem;
  }
}
.blog-lastBlog {
  border-bottom: 1px solid var(--border-tertiary);
  padding-bottom: 2rem;
}
@media (width <= 640px) {
  .blog-lastBlog {
    padding-bottom: 3rem;
  }
}
.blog-lastBlog-card {
  background-color: var(--bg-secondary);
  padding: 1.5rem 1.5rem 1.5rem 1.7rem;
  display: grid;
  gap: 3rem;
  grid-template-columns: 47% auto;
  border: 1px dashed var(--border-secondary);
}
@media (width <= 640px) {
  .blog-lastBlog-card {
    padding: 1.2rem;
    grid-template-columns: none;
  }
}
.blog-lastBlog-card:hover {
  background-color: transparent;
  border: 1px dashed var(--text-primary);
}
.blog-lastBlog-card:hover h1 {
  text-decoration: underline;
}
.blog-lastBlog-card section {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.blog-lastBlog-card section span {
  font-size: 0.8rem;
  color: var(--text-tertiary);
}
.blog-lastBlog-card section h1 {
  margin-top: 0.4rem;
  font-size: 1.8rem;
  font-weight: 600;
  color: var(--text-primary);
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
@media (width <= 1280px) {
  .blog-lastBlog-card section h1 {
    font-size: 1.5rem;
  }
}
@media (width <= 884px) {
  .blog-lastBlog-card section h1 {
    font-size: 1.2rem;
  }
}
@media (width <= 640px) {
  .blog-lastBlog-card section h1 {
    font-size: 1.5rem;
  }
}
.blog-lastBlog-card section p {
  margin-block: 1rem 2rem;
  color: var(--text-secondary);
  display: -webkit-box;
  line-clamp: 3;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.blog-lastBlog-card img {
  height: 100%;
}
@media (width <= 640px) {
  .blog-lastBlog-card img {
    height: auto;
  }
}
/* ... */

